2011-12-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/atomic_ops.h:
	* Source/callbacks.h:
	* Source/threading.h:
	* Source/GSPrivate.h:
	* Source/CFError.c:
	* Source/CFArray.c:
	* Source/CFTimeZone.c:
	* Source/CFDictionary.c:
	* Source/CFCalendar.c:
	* Source/CFBase.c:
	* Source/CFStringEncoding.c:
	* Source/CFStringFormat.c:
	* Source/CFNumber.c:
	* Source/CFLocale.c:
	* Source/CFData.c:
	* Source/CFDate.c:
	* Source/CFRuntime.c: Replaced four different header files with 
	GSPrivate.h.
	* Source/CFString.c: Cleaned up.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Clean up.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Don't use libicu to create locale identifier.

2011-12-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Clean up.

2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Add new function to copy hash tables.
	* Source/CFDictionary.c: Use new GSHashTable functions.
	* Source/CFRuntime.c: Fix bug in _CFRuntimeGetClassWithTypeID().

2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDictionary.c: Worked on CFMutableDictionary functions.
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Cleaned up.

2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDictionary.c: Added class functions.
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Added add, set, replace, and remove functions.

2011-12-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Added CFDictionary to build and fixed bug 
	in _CFRuntimeInitStaticInstance().
	* Source/GNUmakefile: Added CFDictionary.c.
	* Source/CFDictionary.m: Removed.
	* Source/GSHashTable.c:
	* Source/CFDictionary.c: Fixed bugs.
	* Source/CFString.c: Modified __CFStringMakeConstantString() to 
	use the new CFDictionary functionality.

2011-12-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: